PROG: Echo command should now work on all OS's. References #911.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5031 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/equalizer/tsts/gain/Makefile
+++ b/isis/src/base/apps/equalizer/tsts/gain/Makefile
@@ -13,8 +13,9 @@ commands:
 	$(MV) I02609002RDR.lev2.equ.cub $(OUTPUT)/equalizerTruth3.cub; 
 	$(LS) $(INPUT)/EN*.cub > $(OUTPUT)/files.lis;
 	$(LS) $(INPUT)/EN*top*.cub > $(OUTPUT)/hold.lis;
-	$(ECHO) -e "$(OUTPUT)/equalizerTruth4.cub\n$(OUTPUT)/equalizerTruth5.cub\n$(OUTPUT)/equalizerTruth6.cub" \
-	  > $(OUTPUT)/tolist.lis
+	$(ECHO) "$(OUTPUT)/equalizerTruth4.cub" > $(OUTPUT)/tolist.lis
+	$(ECHO) "$(OUTPUT)/equalizerTruth5.cub" >> $(OUTPUT)/tolist.lis
+	$(ECHO) "$(OUTPUT)/equalizerTruth6.cub" >> $(OUTPUT)/tolist.lis
 	$(APPNAME) fromlist=$(OUTPUT)/files.lis holdlist=$(OUTPUT)/hold.lis \
 	  adjust=gain tolist=$(OUTPUT)/tolist.lis > /dev/null;
 	$(RM) $(OUTPUT)/files.lis $(OUTPUT)/hold.lis $(OUTPUT)/tolist.lis;
