PROG: Fixed errors test for macs. References #1232.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5037 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/shadow/tsts/errors/Makefile
+++ b/isis/src/base/apps/shadow/tsts/errors/Makefile
@@ -5,8 +5,8 @@ include $(ISISROOT)/make/isismake.tsts
 # The seds erase cube names from []'s in the output error messages
 commands:
 	$(APPNAME) from=$(INPUT)/ab102401.dem.cub match=$(INPUT)/isisTruth.cub \
-	  to=$(OUTPUT)/error1.cub |& sed 's/\[.*cub/[/g' > $(OUTPUT)/error1.txt || true;
+	  to=$(OUTPUT)/error1.cub 2>&1 | sed 's/\[.*cub/[/g' > $(OUTPUT)/error1.txt || true;
 	$(APPNAME) from=$(INPUT)/ab102401.almostdem.cub match=$(INPUT)/isisTruth.cub \
-	  to=$(OUTPUT)/error1.cub |& sed 's/\[.*cub/[/g' > $(OUTPUT)/error2.txt || true;
+	  to=$(OUTPUT)/error1.cub 2>&1 | sed 's/\[.*cub/[/g' > $(OUTPUT)/error2.txt || true;
 	$(APPNAME) from=$(INPUT)/isisTruth.cub match=$(INPUT)/isisTruth.cub \
-	  to=$(OUTPUT)/error2.cub |& sed 's/\[.*cub/[/g' > $(OUTPUT)/error3.txt || true;
+	  to=$(OUTPUT)/error2.cub 2>&1 | sed 's/\[.*cub/[/g' > $(OUTPUT)/error3.txt || true;
