PROG: Corrected app test makefiles for socetframesettings, references #1526
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5038 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/socet/apps/socetframesettings/tsts/noblobs/Makefile
+++ b/isis/src/socet/apps/socetframesettings/tsts/noblobs/Makefile
@@ -2,6 +2,7 @@ APPNAME = socetframesettings
 
 include $(ISISROOT)/make/isismake.tsts
 
+# The sed removes the [<path>/<cube>] string from output error messages
 commands:
 	$(APPNAME) from=$(INPUT)/N1612266665_1.noblobs.cub \
 	  to=$(OUTPUT)/N1612266665_1.txt \
@@ -10,4 +11,7 @@ commands:
 	  ss_input_path=E:\\IMAGES\\TEST\\ \
 	  ss_cam_calib_path=C:\\SOCET_SET_5.6.0\\internal_dbs\\CAM\\ >& \
 	  $(OUTPUT)/error.txt || true;
+	cat $(OUTPUT)/error.txt | \
+	 sed 's/\[\([^"]*\)\]//g' > $(OUTPUT)/sed_error.txt
+	$(RM) $(OUTPUT)/error.txt
 
