Fixes #575. Fixed problem with accessing Qt GUI environment from command line; refined way text is defined for bar scale
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5041 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/barscale/tsts/ontop/Makefile
+++ b/isis/src/base/apps/barscale/tsts/ontop/Makefile
@@ -7,13 +7,19 @@ commands:
 	  to=$(OUTPUT)/ontop.cub \
 	  rightlimit=100 \
 	  rightsegs=2 \
-	  cornerline=13000 \
+	  cornerline=12707 \
 	  cornersample=500 \
-	  textloc=above \
-	  background=black \
+	  textloc=below \
+	  background=white \
 	  pixres=center \
 	  units=kilometer \
 	  leftlimit=0 \
 	  padimage=false \
 	  barheight=200 \
-	  textheight=75 > /dev/null;
+	  textheight=75 >& /dev/null; \
+	crop from=$(OUTPUT)/ontop.cub \
+	  to=$(OUTPUT)/ontop_crop.cub \
+	  sample=1 nsamples=12000 sinc=1 \
+	  line=1 nlines=12917 linc=1 \
+	  > /dev/null; \
+	$(MV) $(OUTPUT)/ontop_crop.cub $(OUTPUT)/ontop.cub;
