In crism2isis, fixed an issue with the output labels missing translations for the Kernels label group. This problem resulted in spiceinit not running when it should have been able to. Fixes #1552.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5071 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/crism2isis/tsts/trdr/Makefile
+++ b/isis/src/mro/apps/crism2isis/tsts/trdr/Makefile
@@ -5,3 +5,6 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/frt00003b73_01_if156s_trr2.lbl \
 	to=$(OUTPUT)/trdrtruth.cub > /dev/null;
+	$(APPNAME) from=$(INPUT)/frt0001e5c3_07_if124s_trr3.lbl \
+	to=$(OUTPUT)/trdrtruth2.cub > /dev/null;
+	getkey from=$(OUTPUT)/trdrtruth2.cub grp=Kernels keyword=NaifIkCode > $(OUTPUT)/ik.txt;
