PROG: Fixed Makefile for msi2isis appTest. References #1248.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5099 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/near/apps/msi2isis/tsts/errors/Makefile
+++ b/isis/src/near/apps/msi2isis/tsts/errors/Makefile
@@ -47,7 +47,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/label7.lbl \
 	to=$(OUTPUT)/output.cub 2>> $(OUTPUT)/error_temp.txt > /dev/null;
 
-	$(SED) 's+/.*/input/+input/+' $(OUTPUT)/error_temp.txt > $(OUTPUT)/error.txt;
+	$(SED) 's+\[/.*/input/+\[input/+' $(OUTPUT)/error_temp.txt > $(OUTPUT)/error.txt;
 	rm -f $(OUTPUT)/error_temp.txt;
 	rm -f $(OUTPUT)/input.cub;
 	rm -f $(OUTPUT)/output.cub;
