updated jigsaw mestimator app tst references #1524 #1596
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5113 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/jigsaw/tsts/mestimator/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/mestimator/Makefile
@@ -1,6 +1,6 @@
 APPNAME = jigsaw
 # This test exercises the bundle adjustment of images from the Apollo frame camera.
-# sparse (cholmod) method, solving for position, angles (with twist), and radius; with error propagation; using a two tier M-estimator approach.
+# sparse (cholmod) method, solving for position, angles (with twist), and radius; using a two tier M-estimator approach.
 
 # The "cat bundleout.txt" command in these tests uses sed to do the following (in order):
 # 1. remove cube filename paths
