Modified appTests to not print SCLK version number in truth data. Fixes #1606.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5116 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/spiceinit/tsts/ckConfigFile/Makefile
+++ b/isis/src/base/apps/spiceinit/tsts/ckConfigFile/Makefile
@@ -9,5 +9,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(CP) $(INPUT)/frt0001cfd8_07_if124s_trr3_b24.cub $(OUTPUT)/spiceinitTruth.cub > /dev/null;
 	$(APPNAME) from=$(OUTPUT)/spiceinitTruth.cub > /dev/null;
-	catlab from=$(OUTPUT)/spiceinitTruth.cub > $(OUTPUT)/labels.pvl;
+	catlab from=$(OUTPUT)/spiceinitTruth.cub > $(OUTPUT)/label.pvl;
+	$(SED) 's+mro/kernels/sclk/MRO_SCLKSCET.*tsc+mro/kernels/sclk/MRO_SCLKSCET.tsc+g' $(OUTPUT)/label.pvl > $(OUTPUT)/labels.pvl;
 	rm $(OUTPUT)/spiceinitTruth.cub;
+	rm $(OUTPUT)/label.pvl;
