bug fix in apolloremrx fixes #1586
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5141 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apolloremrx/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apolloremrx/tsts/default/Makefile
@@ -3,4 +3,6 @@ APPNAME = apolloremrx
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	cp $(INPUT)/deferred.txt $(OUTPUT)/deferred.txt > /dev/null;
+	$(APPNAME) from=$(INPUT)/AS17-M-0177.8bit.cropped.cub to=$(OUTPUT)/AS17-M-0177.remrx.cub \
+	  > /dev/null
+
