--- a/isis/src/apollo/apps/apolloremrx/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apolloremrx/tsts/default/Makefile
@@ -3,6 +3,4 @@ APPNAME = apolloremrx
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/AS17-M-0177.8bit.cropped.cub to=$(OUTPUT)/AS17-M-0177.remrx.cub \
-	  > /dev/null
-
+	$(APPNAME) from=$(INPUT)/AS17-M-0177.8bit.cropped.cub to=$(OUTPUT)/AS17-M-0177.remrx.nulled.cub action=null > /dev/null
