Updated with code from ASU to apply temperature dependencies
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5171 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/lro/apps/lrowaccal/tsts/wac-uv/Makefile
+++ b/isis/src/lro/apps/lrowaccal/tsts/wac-uv/Makefile
@@ -8,3 +8,5 @@ commands:
 	  to=$(OUTPUT)/${FILE}.uv.odd.cal.cub > /dev/null;
 	$(APPNAME) from=$(INPUT)/${FILE}.uv.even.cub \
           to=$(OUTPUT)/${FILE}.uv.even.cal.cub > /dev/null;
+	$(APPNAME) from=$(INPUT)/${FILE}.uv.even.cub+2 \
+          to=$(OUTPUT)/${FILE}.uv.even.cal.band2.cub > /dev/null;
