--- a/isis/src/lro/apps/lrowaccal/tsts/wac-vis/Makefile
+++ b/isis/src/lro/apps/lrowaccal/tsts/wac-vis/Makefile
@@ -8,3 +8,5 @@ commands:
 	  to=$(OUTPUT)/${FILE}.vis.odd.cal.cub > /dev/null;
 	$(APPNAME) from=$(INPUT)/${FILE}.vis.even.cub \
           to=$(OUTPUT)/${FILE}.vis.even.cal.cub > /dev/null;
+	$(APPNAME) from=$(INPUT)/${FILE}.vis.even.cub+4 \
+          to=$(OUTPUT)/${FILE}.vis.even.cal.band4.cub > /dev/null;
