Fixed kaguyami2isis so that the Naif Frame Code is set according to the base band of the image. Fixes #1167 and #1680.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5235 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/local/apps/kaguyami2isis/tsts/default/Makefile
+++ b/isis/src/local/apps/kaguyami2isis/tsts/default/Makefile
@@ -8,3 +8,5 @@ commands:
 	  to=$(OUTPUT)/vis.cub > /dev/null
 	$(APPNAME) from=$(INPUT)/nir.img \
 	  to=$(OUTPUT)/nir.cub > /dev/null
+	$(APPNAME) from=$(INPUT)/MVA_2B2_01_01229N603E1343 \
+	  to=$(OUTPUT)/MVA_2B2_01_01229N603E1343.cub > /dev/null
