In Orthographic, removed code for the special case, clat = 0, in the constructor to give the correct longitude range. Added a range check in SetCoordinate() to make sure that the current longitude is in the correct domain. Updated the unit test as well as the app test for map2map. Fixes #1471.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5481 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/map2map/tsts/projection/Makefile
+++ b/isis/src/base/apps/map2map/tsts/projection/Makefile
@@ -9,7 +9,10 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) FROM=$(INPUT)/ab102401.cub \
-	MAP=$(INPUT)/oblique.map \
-	TO=$(OUTPUT)/map2mapTruth.cub \
-	> /dev/null;
+	  MAP=$(INPUT)/oblique.map \
+	  TO=$(OUTPUT)/map2mapTruth.cub \
+	  > /dev/null;
+	$(APPNAME) FROM=$(INPUT)/WAC_GLD100_V1.0_GLOBAL_with_LOLA_30M_POLE.10km.cub \
+	  MAP=$(INPUT)/orthographic.map TO=$(OUTPUT)/orthoTruth.cub DEFAULTRANGE=MAP \
+	  > /dev/null;
 	catlab FROM=$(OUTPUT)/map2mapTruth.cub >& $(OUTPUT)/labels.txt;
