Fixed bug in the labels of hidtmgen. Fixes #797. Fixes #946
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5558 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/hidtmgen/tsts/nonDefaultNames/Makefile
+++ b/isis/src/mro/apps/hidtmgen/tsts/nonDefaultNames/Makefile
@@ -18,14 +18,16 @@ commands:
   	  ORTHO3=$(INPUT)/PSP_003608_1510_1m_o_forPDS.cub \
 	  ORTHO4=$(INPUT)/PSP_003608_1510_25cm_o_forPDS.cub \
 	  OUTPUTDIR=$(OUTPUT) \
-	  PRODUCT_VERSION_ID=1.0 \
-	  RATIONALE_DESC=Rationale \
 	  DEFAULTNAMES=FALSE \
 	  DTMTO=$(OUTPUT)/DTM.IMG \
 	  ORTHO1TO=$(OUTPUT)/ORTHO1.IMG \
 	  ORTHO2TO=$(OUTPUT)/ORTHO2.IMG \
 	  ORTHO3TO=$(OUTPUT)/ORTHO3.IMG \
 	  ORTHO4TO=$(OUTPUT)/ORTHO4.IMG \
+	  PARAMSPVL=$(INPUT)/parameters.pvl \
+	  PRODUCER_FULL_NAME="Producer Full Name User Entered" \
+	  RATIONALE_DESC=Rationale \
+	  PRODUCT_VERSION_ID=3.0 \
 	  DTM_PRODUCT_ID=DtmProduct \
 	  ORTHO1_PRODUCT_ID=Ortho1Product \
 	  ORTHO2_PRODUCT_ID=Ortho2Product \
