PROG Fixed the flatOut app test for mappt. References #1614.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5603 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/mappt/tsts/flatOutput/Makefile
+++ b/isis/src/base/apps/mappt/tsts/flatOutput/Makefile
@@ -4,14 +4,18 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/I00824006RDR.lev2.cub \
-	  to=$(OUTPUT)/mappt.csv \
+	  to=$(OUTPUT)/tmp.csv \
 	  format=flat \
 	  append=false \
-          type=ground \
+	  type=ground \
 	  coordsys=userdefined \
 	  lattype=planetographic \
 	  londir=positivewest \
-          londom=180 \
+	  londom=180 \
 	  latitude=-1.527843650235 \
-          longitude=7.8016320748916 \
-          > /dev/null;
+	  longitude=7.8016320748916 \
+	  > /dev/null; \
+	  `sed 's/\(^Filename\,\)//g' $(OUTPUT)/tmp.csv > $(OUTPUT)/tmp2.csv`; \
+	  `sed 's/\(^.*\/I00824006RDR\.lev2\.cub\,\)//g' $(OUTPUT)/tmp2.csv > $(OUTPUT)/mappt.csv` \
+	  $(RM) $(OUTPUT)/tmp.csv;                                                             \
+	  $(RM) $(OUTPUT)/tmp2.csv;
