Added new program, pixel2map, which does a forward projection. Pixel2map replaces the program, vims2map, which only worked on Cassini/Vims images.  Improved the Cassini/Vims camera model. Fixed a problem with the Vims clock inaccuracy by adjusting the IR exposure time and interline delay time from the labels. Fixes #1289. Fixes #1759.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5620 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mgs/apps/mocevenodd/tsts/default/Makefile
+++ b/isis/src/mgs/apps/mocevenodd/tsts/default/Makefile
@@ -3,9 +3,5 @@ APPNAME = mocevenodd
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	moc2isis \
-	  from=$(INPUT)/fha00491.imq \
-	  to=$(OUTPUT)/mgsTemp.cub >& /dev/null;
-	spiceinit from=$(OUTPUT)/mgsTemp.cub >& /dev/null;
-	$(APPNAME) from=$(OUTPUT)/mgsTemp.cub \
+	$(APPNAME) from=$(INPUT)/fha00491.cub \
 	  to=$(OUTPUT)/mocevenoddTruth.cub >& /dev/null;
