--- a/isis/src/mgs/apps/mocnoise50/tsts/default/Makefile
+++ b/isis/src/mgs/apps/mocnoise50/tsts/default/Makefile
@@ -3,10 +3,6 @@ APPNAME = mocnoise50
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	moc2isis \
-	  from=$(INPUT)/fha00491.imq \
-	  to=$(OUTPUT)/mgsTemp.cub >& /dev/null;
-	spiceinit from=$(OUTPUT)/mgsTemp.cub >& /dev/null;
-	$(APPNAME) from=$(OUTPUT)/mgsTemp.cub \
+	$(APPNAME) from=$(INPUT)/fha00491.cub \
 	  to=$(OUTPUT)/mocnoise50Truth.cub \
 	  width=5 >& /dev/null;
