ringscam2map - Changed tolerances for following apptests: default, combination1, combination4.  References #1289.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5626 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/ringscam2map/tsts/combination4/Makefile
+++ b/isis/src/base/apps/ringscam2map/tsts/combination4/Makefile
@@ -15,8 +15,8 @@
 APPNAME = ringscam2map
 
 vimsVIS_1.cub.TOLERANCE = .000001
-vimsVIS_2.cub.TOLERANCE = .000130
-vimsVIS_3.cub.TOLERANCE = .000062
+vimsVIS_2.cub.TOLERANCE = 1.6649
+vimsVIS_3.cub.TOLERANCE = .6508
 
 include $(ISISROOT)/make/isismake.tsts
 
