Output the statistics used for the linear regression to the log. Updated documentation to correctly describe the POVERLAP option and to explain that this application only works on single band cubes. Fixes #1383.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5684 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/tonematch/tsts/poverlap/Makefile
+++ b/isis/src/base/apps/tonematch/tsts/poverlap/Makefile
@@ -3,7 +3,7 @@ APPNAME = tonematch
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	 $(APPNAME) from= $(INPUT)/I00824006RDR.lev2.cub+1 \
-	  match=$(INPUT)/I01523019RDR.lev2.cub+1 \
+	 $(APPNAME) from= $(INPUT)/singleBand_I00824006RDR.lev2.cub \
+	  match=$(INPUT)/singleBand_I01523019RDR.lev2.cub \
 	  to=$(OUTPUT)/tonematchTruth2.cub \
-	  poverlap=true > /dev/null;
+	  poverlap=true outstats=$(OUTPUT)/outputStats.pvl> /dev/null;
