--- a/isis/src/base/apps/tonematch/tsts/default/Makefile
+++ b/isis/src/base/apps/tonematch/tsts/default/Makefile
@@ -3,6 +3,6 @@ APPNAME = tonematch
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	 $(APPNAME) from= $(INPUT)/I00824006RDR.lev2.cub+1 \
-	  match=$(INPUT)/I00824006RDR.lev2.cub+1 \
+	 $(APPNAME) from= $(INPUT)/singleBand_I00824006RDR.lev2.cub \
+	  match=$(INPUT)/singleBand_I00824006RDR.lev2.cub \
 	  to=$(OUTPUT)/tonematchTruth1.cub > /dev/null;
