In ImageImporter, added the history label to the output cube. In std2isis, updated the default app test to make sure the history group is in the resulting cube label. Fixes #1894.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5704 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/std2isis/tsts/default/Makefile
+++ b/isis/src/base/apps/std2isis/tsts/default/Makefile
@@ -4,4 +4,5 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) FROM=$(INPUT)/in.png TO=$(OUTPUT)/out.cub \
-        > /dev/null;
+	> /dev/null;
+	catlab from=$(OUTPUT)/out.cub > $(OUTPUT)/outLabel.pvl;
