(PROG) Fixed a broken test for automos. References #1500.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5719 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/automos/tsts/nominmax/Makefile
+++ b/isis/src/base/apps/automos/tsts/nominmax/Makefile
@@ -5,6 +5,8 @@ mos.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) fromlist=$(INPUT)/cube.lis mos=$(OUTPUT)/mos.cub > /dev/null;
-	catlab from=$(OUTPUT)/mos.cub > $(OUTPUT)/mos.txt;
-	rm $(OUTPUT)/mos.cub;
+	ls $(INPUT)/*.cub > $(OUTPUT)/inputlist.txt;                                           \
+	$(APPNAME) fromlist=$(OUTPUT)/inputlist.txt mos=$(OUTPUT)/mos.cub > /dev/null;         \
+	catlab from=$(OUTPUT)/mos.cub > $(OUTPUT)/mos.txt;                                     \
+	$(RM) $(OUTPUT)/mos.cub;                                                               \
+	$(RM) $(OUTPUT)/inputlist.txt;
