csspckgen apptest changed to get rid of specific dates in the output file.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5724 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/system/apps/csspckgen/tsts/default/Makefile
+++ b/isis/src/system/apps/csspckgen/tsts/default/Makefile
@@ -6,3 +6,6 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) to=$(OUTPUT)/output.db.txt > /dev/null;
+	$(SED) "s#\(File = .cassini/kernels/pck/cpck\)[0-9][0-9][A-Z][a-z][a-z][0-9][0-9][0-9][0-9]\(.tpc\)#\1_DateRemovedForTest\2#" \
+	    $(OUTPUT)/output.db.txt > $(OUTPUT)/tmp.txt;
+	$(MV) $(OUTPUT)/tmp.txt $(OUTPUT)/output.db.txt;
