addressed error propagation speed issues in jigsaw; added screen output during error propagation; fixes #2031
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5729 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/jigsaw/tsts/apollo/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/apollo/Makefile
@@ -43,16 +43,12 @@ commands:
 	camsolve=angles \
 	spsolve=position \
 	spacecraft_position_sigma=1000.0 \
-	camera_angles_sigma=2.0 | grep -v "100% Processed" | \
-	grep -v "jigsaw" > apollo_specialk_outLog.txt; \
+	camera_angles_sigma=2.0 > /dev/null;
 	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
 	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
 	  > $(OUTPUT)/apollo_specialK_bundleout.txt;
-	cat apollo_specialk_outLog.txt | grep -v "Elapsed Time:" | grep -v "TotalElapsedTime" | grep -v "ErrorPropagationElapsedTime" \
-	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
-	  > $(OUTPUT)/apollo_specialk_outLog.txt;
 	cat residuals.csv \
 	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  > $(OUTPUT)/apollo_specialK_residuals.csv;
@@ -62,7 +58,6 @@ commands:
 	$(RM) bundleout_images.csv > /dev/null;
 	$(MV) bundleout_points.csv $(OUTPUT)/apollo_specialK_bundleout_points.csv > /dev/null;
 	$(RM) bundleout.txt print.prt > /dev/null;
-	$(RM) apollo_specialk_outLog.txt > /dev/null;
 	$(RM) residuals.csv > /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/cube.lis  \
 	cnet=$(INPUT)/Ames_7-ImageLSTest_USGS_combined.net \
@@ -82,16 +77,12 @@ commands:
 	camsolve=angles \
 	spsolve=position \
 	spacecraft_position_sigma=1000.0 \
-	camera_angles_sigma=2.0 | grep -v "100% Processed" | \
-	grep -v "jigsaw" > apollo_cholmod_outLog.txt;
+	camera_angles_sigma=2.0 > /dev/null;
 	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
 	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
 	  > $(OUTPUT)/apollo_cholmod_bundleout.txt;
-	cat apollo_cholmod_outLog.txt | grep -v "Elapsed Time:" | grep -v "TotalElapsedTime" | grep -v "ErrorPropagationElapsedTime" \
-	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
-	  > $(OUTPUT)/apollo_cholmod_outLog.txt;
 	cat residuals.csv \
 	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  > $(OUTPUT)/apollo_cholmod_residuals.csv;
@@ -101,6 +92,5 @@ commands:
 	$(RM) bundleout_images.csv > /dev/null;
 	$(MV) bundleout_points.csv $(OUTPUT)/apollo_cholmod_bundleout_points.csv > /dev/null;
 	$(RM) bundleout.txt print.prt > /dev/null;
-	$(RM) apollo_cholmod_outLog.txt > /dev/null;
 	$(RM) residuals.csv > /dev/null;
 	$(RM) $(OUTPUT)/cube.lis print.prt > /dev/null;
