--- a/isis/src/control/apps/jigsaw/tsts/case2/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/case2/Makefile
@@ -22,16 +22,12 @@ commands:
 	method=oldsparse \
 	sigma0=1.e-5  \
 	update=yes \
-	spsolve=position | grep -v "100% Processed" | \
-	grep -v "jigsaw" > case2OutLog.txt;
+	spsolve=position > /dev/null;
 	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
 	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
 	  > $(OUTPUT)/bundleout.txt
-	cat case2OutLog.txt \
-	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
-	  > $(OUTPUT)/case2OutLog.txt
 	cat residuals.csv \
 	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  > $(OUTPUT)/residuals.csv
@@ -41,6 +37,6 @@ commands:
 	$(RM) residuals.csv bundleout_images.csv > /dev/null;
 	$(MV) bundleout_points.csv $(OUTPUT)/bundleout_points.csv > /dev/null;
 	$(RM) $(OUTPUT)/cub.lis $(OUTPUT)/held.lis $(OUTPUT)/case2OutNet.bin print.prt > /dev/null;
-	$(RM) bundleout.txt case2OutLog.txt print.prt > /dev/null
+	$(RM) bundleout.txt print.prt > /dev/null
 	cathist from=$(OUTPUT)/vik.cub > $(OUTPUT)/vik.pvl;
 	cathist from=$(OUTPUT)/e0400710.lev1.cub > $(OUTPUT)/e0400710.lev1.cub.pvl;
