In ProcessMosaic, added check for count band when priority=average. The mosaic apps should fail when priority=average and there is no count band. In handmos, added an app test for the error check when PRIORITY=AVERAGE and the mosaic does not have a count band. Fixes #746.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@5746 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/handmos/tsts/average/Makefile
+++ b/isis/src/base/apps/handmos/tsts/average/Makefile
@@ -13,4 +13,13 @@ commands:
 	  propagate=false \
 	  nsamples=10 \
 	  nlines=20 \
-	  nbands=1 > /dev/null;
+	  nbands=1 > /dev/null; \
+	$(CP) $(INPUT)/average.cub $(OUTPUT)/average.cub; \
+	$(APPNAME) from=$(INPUT)/ten.cub \
+	  mosaic=$(OUTPUT)/average.cub \
+	  priority=average \
+	  outsample=5 \
+	  outline=5 \
+	  outband=1 \
+	  matchbandbin=false 2>> $(OUTPUT)/errors.txt > /dev/null;\
+	$(RM) $(OUTPUT)/average.cub;
